base/docmost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost
  labels:
    app: docmost
  annotations:
    # Auto-restart the pod(s) if secret or CM change.
    reloader.stakater.com/auto: "true"
    reloader.stakater.com/rollout-strategy: "restart"

    # Pull in 1Password secret for app key and other sensitive data.
    operator.1password.io/item-path: "vaults/Kubernetes/items/replace-me"
    operator.1password.io/item-name: "replace-me"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  template:
    metadata:
      labels:
        app: docmost
    spec:
      containers:
        - name: docmost
          image: docmost/docmost:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: docmost-storage
              mountPath: /app/data/storage
      volumes:
        - name: docmost-storage
          persistentVolumeClaim:
            claimName: docmost-storage-pvc
