base/docmost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docmost-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: docmost
spec:
  tls:
    - hosts:
        - docs.zbmowrey.com
      secretName: domain-zbm001-tls
  rules:
    - host: docs.zbmowrey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmost
                port:
                  number: 3000
